# cloudsync

./: CloudSync.cabal  README  q
node1/.tcachedata/: Nodes
node1/.tcachedata/workflow/Stat/stamp/: void
node2/.tcachedata/workflow/Stat/stamp/: void
src/: Callsample.hi  Callsample.hs  CloudSync.hi  CloudSync.hs  DistribUtils.hs  EventSourcing.hi  EventSourcing.hs  Main.hs
src/.tcachedata/: Consolidated  Nodes
src/.tcachedata/workflow/: Running
src/.tcachedata/workflow/Stat/stamp/: void
